--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,39 @@ jobs:
         with:
           path: './site'
 
+  sast:
+    name: 1. SAST - Static Application Security Testing
+    runs-on: ubuntu-latest
+    needs: construir
+    steps:
+      - name: Baixar o código do repositório
+        uses: actions/checkout@v4
+
+      - name: Rodar SAST
+        run: echo "🔍 Rodando análise estática de segurança (SAST)..."
+
+  dast:
+    name: 2. DAST - Dynamic Application Security Testing
+    runs-on: ubuntu-latest
+    needs: sast
+    steps:
+      - name: Baixar o código do repositório
+        uses: actions/checkout@v4
+
+      - name: Rodar DAST
+        run: echo "🌐 Rodando análise dinâmica de segurança (DAST)..."
+
+  deploy:
+    name: 3. Deploy
+    runs-on: ubuntu-latest
+    needs: dast
+    steps:
+      - name: Baixar o código do repositório
+        uses: actions/checkout@v4
+
+      - name: Realizar o deploy
+        run: echo "🚀 Realizando o deploy..."
+
   publicar:
     name: 3. Publicar no GitHub Pages
     runs-on: ubuntu-latest
